# c_plus_plus

./: .gitignore  10_pointers.cpp  11_functions.cpp  1Hello.cpp  1_outputs.cpp  2DataTypes1.cpp  3ArithmeticOperators.cpp  6_loops.cpp  7_arrays.cpp  8_structures.cpp  README.md  a.out  basicMath.cpp  dynamticArray.cpp  dynamticArray.text  example1.cpp  include.h  install-gcc.sh  limits.cpp  linkedList.cpp  paycheck.cpp
C++ Syntax/: 10_pointers.cpp  11_functions.cpp  12_classes.cpp  13_files.cpp  14_exceptions.cpp  2_data_types.cpp  3_operators.cpp  4_strings.cpp  5_math.cpp  6_loops.cpp  9_references.cpp  README.md
Donut/: donut.c
GUI - Builds/GTK/MyGTKApp/: CMakeLists.txt  README.md  main.cpp  window.cpp
GUI - Builds/GTK/MyGTKApp/linux-build/: Makefile  cmake_install.cmake
GUI - Builds/GTK/MyGTKApp/windows-build/: .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake
GUI - Builds/SFML/MySFMLProject/: 2.txt  CMakeLists.txt  main.cpp
GUI - Builds/wxWidgets-3.2.6/MyProject/: CMakeLists.txt  main.cpp
Machine Learning C++/: CMakeLists.txt  README.md
Machine Learning C++/Kirill_Kolodiazhnyi/: Chapter 1  README.md
Machine Learning C++/Kirill_Kolodiazhnyi/Notes/: Chapter 1  Chapter 1.md  reader.cpp  test.md
Machine Learning C++/MINIST_ML/: CMakeLists.txt  README.md
Machine Learning C++/MINIST_ML/include/: data.h  data_handler.h
Machine Learning C++/MINIST_ML/src/: data.cpp  data_handler.cpp  main.cpp
Machine Learning C++/MINIST_ML_2/include/: data.hpp  data_handler.hpp
Machine Learning C++/include/: data.h  data_handler.h
Machine Learning C++/src/: data.cpp  data_handler.cpp
NetCommon/: NetCommon.sln  NetCommon.vcxproj  NetCommon.vcxproj.filters  net_common.h  net_messege.h
Neural Networks from Scratch/: LayerOfNeurons.cpp  LayerOfNeurons.py  SingleNeuron.py
OpenGL - Create 3D & 2D graphics/: README.md
Project 1/: README.md
Project: Data Structures & Algorithms/: 00 - Executable File Gen.sh  01 - Stacks.cpp  08 - Linear search.cpp  17 -  Hash Tables.cpp
Project: Language Learning/: 00 - Exe File Maker.sh  00 - Executable File Gen.sh  02 - Variables & Basic Data Types.cpp  03 - Const Keyword.cpp  04 - Namespaces.cpp  05 - Typedef.cpp  06 - Arithmetic Operators.cpp  07 - Type conversion.cpp  08 - User input.cpp  09 - Useful math related functions.cpp  10 - Hypotenuse calculator practice program.cpp  11 - If statements.cpp  12 - Switches.cpp  13 - Console calculator program.cpp  14 - Ternary operator.cpp  15 - Logical operators.cpp  16 - Temperature conversion program.cpp  (+46 more)
(+7335 files in other folders)
